// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures should match all snapshots: adjacent.mdx 1`] = `Array []`;

exports[`fixtures should match all snapshots: basic.mdx 1`] = `Array []`;

exports[`fixtures should match all snapshots: blank-lines.mdx 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 16,
    "endLine": 27,
    "fix": Object {
      "range": Array [
        548,
        563,
      ],
      "text": "# Hello, world!",
    },
    "line": 27,
    "message": "Don’t use multiple top level headings (3:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  Object {
    "column": 2,
    "endColumn": 7,
    "endLine": 31,
    "line": 31,
    "message": "'Tweet' is not defined.",
    "nodeType": "JSXIdentifier",
    "ruleId": "react/jsx-no-undef",
    "severity": 2,
  },
  Object {
    "column": 2,
    "endColumn": 14,
    "endLine": 33,
    "line": 33,
    "message": "'TextGradient' is not defined.",
    "nodeType": "JSXIdentifier",
    "ruleId": "react/jsx-no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "endColumn": 36,
    "endLine": 35,
    "fix": Object {
      "range": Array [
        651,
        686,
      ],
      "text": "# Here's a text gradient shortcode!",
    },
    "line": 35,
    "message": "Don’t use multiple top level headings (3:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  Object {
    "column": 7,
    "line": 35,
    "message": "\`'\` can be escaped with \`&apos;\`, \`&lsquo;\`, \`&#39;\`, \`&rsquo;\`.",
    "nodeType": "JSXText",
    "ruleId": "mdx/no-unescaped-entities",
    "severity": 1,
  },
  Object {
    "column": 2,
    "endColumn": 9,
    "endLine": 41,
    "line": 41,
    "message": "'YouTube' is not defined.",
    "nodeType": "JSXIdentifier",
    "ruleId": "react/jsx-no-undef",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: code-block.md 1`] = `
Array [
  Object {
    "column": 8,
    "endColumn": 23,
    "endLine": 2,
    "line": 2,
    "message": "Unexpected var, use let or const instead.",
    "messageId": "unexpectedVar",
    "nodeType": "VariableDeclaration",
    "ruleId": "no-var",
    "severity": 1,
    "suggestions": null,
  },
  Object {
    "column": 21,
    "endColumn": 27,
    "endLine": 4,
    "line": 4,
    "message": "Prefer the spread operator over \`Array#concat(…)\`.",
    "messageId": "array-concat",
    "nodeType": "Identifier",
    "ruleId": "unicorn/prefer-spread",
    "severity": 1,
    "suggestions": null,
  },
  Object {
    "column": 26,
    "endColumn": 31,
    "endLine": 12,
    "line": 12,
    "message": "'React' must be in scope when using JSX",
    "nodeType": "JSXOpeningElement",
    "ruleId": "react/react-in-jsx-scope",
    "severity": 1,
    "suggestions": null,
  },
  Object {
    "column": 33,
    "endColumn": null,
    "endLine": null,
    "line": 12,
    "message": "\`>\` can be escaped with \`&gt;\`.",
    "nodeType": "JSXText",
    "ruleId": "react/no-unescaped-entities",
    "severity": 1,
    "suggestions": null,
  },
  Object {
    "column": 1,
    "endColumn": null,
    "endLine": null,
    "fatal": true,
    "line": 16,
    "message": "Parsing error: \\"parserOptions.project\\" has been set for @typescript-eslint/parser.
The file does not match your project config: test/fixtures/code-block.md/2.ts.
The file must be included in at least one of the projects provided.",
    "ruleId": null,
    "severity": 1,
    "suggestions": null,
  },
  Object {
    "column": 1,
    "endColumn": 6,
    "endLine": 22,
    "fix": Object {
      "range": Array [
        237,
        242,
      ],
      "text": "# abc",
    },
    "line": 22,
    "message": "Do not use headings with similar content (1:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-duplicate-headings",
    "severity": 1,
    "suggestions": null,
  },
  Object {
    "column": 1,
    "endColumn": 6,
    "endLine": 22,
    "fix": Object {
      "range": Array [
        237,
        242,
      ],
      "text": "# abc",
    },
    "line": 22,
    "message": "Don’t use multiple top level headings (1:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
    "suggestions": null,
  },
  Object {
    "column": 8,
    "endColumn": 13,
    "endLine": 26,
    "line": 26,
    "message": "'React' is defined but never used.",
    "messageId": "unusedVar",
    "nodeType": "Identifier",
    "ruleId": "no-unused-vars",
    "severity": 1,
    "suggestions": null,
  },
  Object {
    "column": 1,
    "endColumn": 6,
    "endLine": 30,
    "fix": Object {
      "range": Array [
        289,
        294,
      ],
      "text": "# abc",
    },
    "line": 30,
    "message": "Do not use headings with similar content (3:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-duplicate-headings",
    "severity": 1,
    "suggestions": null,
  },
  Object {
    "column": 1,
    "endColumn": 6,
    "endLine": 30,
    "fix": Object {
      "range": Array [
        289,
        294,
      ],
      "text": "# abc",
    },
    "line": 30,
    "message": "Don’t use multiple top level headings (3:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
    "suggestions": null,
  },
]
`;

exports[`fixtures should match all snapshots: details.mdx 1`] = `
Array [
  Object {
    "column": 290,
    "line": 3,
    "message": "\`'\` can be escaped with \`&apos;\`, \`&lsquo;\`, \`&#39;\`, \`&rsquo;\`.",
    "nodeType": "JSXText",
    "ruleId": "mdx/no-unescaped-entities",
    "severity": 1,
  },
  Object {
    "column": 5,
    "line": 5,
    "message": "\`'\` can be escaped with \`&apos;\`, \`&lsquo;\`, \`&#39;\`, \`&rsquo;\`.",
    "nodeType": "JSXText",
    "ruleId": "mdx/no-unescaped-entities",
    "severity": 1,
  },
]
`;

exports[`fixtures should match all snapshots: jsx-in-list.mdx 1`] = `Array []`;

exports[`fixtures should match all snapshots: leading-spaces.mdx 1`] = `Array []`;

exports[`fixtures should match all snapshots: markdown.md 1`] = `Array []`;

exports[`fixtures should match all snapshots: no-jsx-html-comments.mdx 1`] = `Array []`;

exports[`fixtures should match all snapshots: no-unescaped-entities.mdx 1`] = `
Array [
  Object {
    "column": 8,
    "line": 2,
    "message": "\`>\` can be escaped with \`&gt;\`.",
    "nodeType": "JSXText",
    "ruleId": "mdx/no-unescaped-entities",
    "severity": 1,
  },
  Object {
    "column": 13,
    "line": 5,
    "message": "\`>\` can be escaped with \`&gt;\`.",
    "nodeType": "JSXText",
    "ruleId": "mdx/no-unescaped-entities",
    "severity": 1,
  },
]
`;

exports[`fixtures should match all snapshots: processor.mdx 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 6,
    "endLine": 3,
    "fix": Object {
      "range": Array [
        7,
        12,
      ],
      "text": "# abc",
    },
    "line": 3,
    "message": "Do not use headings with similar content (1:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-duplicate-headings",
    "severity": 2,
  },
  Object {
    "column": 1,
    "endColumn": 6,
    "endLine": 3,
    "fix": Object {
      "range": Array [
        7,
        12,
      ],
      "text": "# abc",
    },
    "line": 3,
    "message": "Don’t use multiple top level headings (1:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
]
`;

exports[`fixtures should match all snapshots: remark.md 1`] = `Array []`;

exports[`fixtures should match all snapshots: remark.mdx 1`] = `Array []`;
